--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Paws for Pet Adoption</title> 
         <link rel="stylesheet" href="style.css">
     <header>
-            <img id="paws" src="img/paws.png">
+            <img id="paws" src="./img/paws.png">
                 <h1>Cat of the day!</h1>
     </header>
     <nav id="leftnav">
@@ -20,10 +20,10 @@
      <nav id="rightnav">
             <ul>
                 <li>
-                    <a href="https://www.amazon.com/"> Donate Now</a>
+                    <a href="http://www.thehumanesociety.org/more-ways-to-donate/"> Donate Now</a>
                 </li>
                 <li>
-                    <a href="http://www.detik.com">Contact Us</a>
+                    <a href="https://www.thehumanesociety.org/about-us/contact-us/">Contact Us</a>
                 </li>
             </ul>    
         </nav>
