--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>    
         </nav>
         <div id="center">
-        <img id="elmo" src="./img/Elmo.jpeg">
+        <img id="elmo" src="./img/Elmo.jpg">
 <p>Elmo has been our beloved family pet since she was a kitten. She is approximately eight to ten years old. Elmo is generally well tempered in the correct environment.
 
     She is spayed, vaccinated and healthy. She has had a full vet check up including a blood panel within the past month. <br>
